fix mobile spacing in header section

--- a/src/pages/vault-page/VaultPage.module.scss
+++ b/src/pages/vault-page/VaultPage.module.scss
@@ -18,10 +18,11 @@
   width: 100%;
 }
 
-@media screen and ($d8x-breakpoint-max-sm) {
+@media screen and ($d8x-breakpoint-max-md) {
 
   .container {
     gap: $d8x-spacing * 4;
+    margin-top: 12px;
   }
 }
 
